--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -16,9 +16,8 @@ jobs:
           echo "Install cee-utils"
           ./scripts/get-cee-utils.sh
           echo "Clone Orca-Docs"
-          cd .. && git clone https://github.com/cee-studio/orca-docs
-          echo "Move Orca to Orca-Docs"
-          mv orca orca-docs/ && cd orca-docs
+          git clone https://github.com/cee-studio/orca-docs
+          ln -s ../orca orca-docs/orca
           echo "Install Sphinx"
           pip install sphinx
           pip install sphinx_rtd_theme
@@ -28,15 +27,15 @@ jobs:
       - name: Doxygen Action
         uses: mattnotmitt/doxygen-action@v1.3.1
         with:
-          working-directory: '../orca-docs/'
+          working-directory: 'orca-docs/'
 
       - name: Breathe Action
-        run: make -C docs html
+        run: make -C orca-docs/docs html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.7.3
         with:
-          working-directory: '../orca-docs/'
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: ./docs/build/html
+          publish_dir: ./orca-docs/docs/build/html
+
