--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -13,6 +13,8 @@ jobs:
 
       - name: Dependencies
         run: |
+          echo "Preparing Orca"
+          ./scripts/get-cee-utils.sh
           echo "Preparing Orca-Docs"
           git clone https://github.com/cee-studio/orca-docs
           cp orca-docs/Doxyfile Doxyfile
