--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -46,5 +46,12 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - name: Dependencies
+        run: |
+          echo Installing build-essential
+          sudo apt-get install -y build-essential 
+          echo Installing libcurl and libssl
+          sudo apt-get install -y libcurl4-openssl-dev libssl-dev
+
       - name: Run Makefile
         run: make
