--- a/specs/discord/application_commands.endpoints-params.json
+++ b/specs/discord/application_commands.endpoints-params.json
@@ -12,7 +12,7 @@
       [
         { "name": "name", "type":{ "base":"char", "dec":"*" }, "comment":"1-32 lowercase character name"},
         { "name": "description", "type":{ "base":"char", "dec":"*" }, "comment":"1-100 character description"},
-        { "name": "options", "type":{"base":"int", "int_alias":"enum discord_application_command_option_types", "dec":"ntl"}, "comment":"the parameters for the command"},
+        { "name": "options", "type":{"base":"int", "int_alias":"enum discord_application_command_option_types", "dec":"ntl"}, "comment":"the parameters for the command", "todo":true},
         { "name": "default_permission", "type":{"base":"bool"}, "comment":"whether the command is enabled by default when the app is added to a guild"},
         { "name": "type", "type":{"base":"int", "int_alias":"enum discord_application_command_types"}}
       ]
@@ -26,7 +26,7 @@
       [
         { "name": "name", "type":{ "base":"char", "dec":"*" }, "comment":"1-32 lowercase character name"},
         { "name": "description", "type":{ "base":"char", "dec":"*" }, "comment":"1-100 character description"},
-        { "name": "options", "type":{"base":"int", "int_alias":"enum discord_application_command_option_types", "dec":"ntl"}, "comment":"the parameters for the command"},
+        { "name": "options", "type":{"base":"int", "int_alias":"enum discord_application_command_option_types", "dec":"ntl"}, "comment":"the parameters for the command", "todo":true},
         { "name": "default_permission", "type":{"base":"bool"}, "comment":"whether the command is enabled by default when the app is added to a guild"}
       ]
     },
@@ -39,7 +39,7 @@
       [
         { "name": "name", "type":{ "base":"char", "dec":"*" }, "comment":"1-32 lowercase character name"},
         { "name": "description", "type":{ "base":"char", "dec":"*" }, "comment":"1-100 character description"},
-        { "name": "options", "type":{"base":"int", "int_alias":"enum discord_application_command_option_types", "dec":"ntl"}, "comment":"the parameters for the command"},
+        { "name": "options", "type":{"base":"int", "int_alias":"enum discord_application_command_option_types", "dec":"ntl"}, "comment":"the parameters for the command", "todo":true},
         { "name": "default_permission", "type":{"base":"bool"}, "comment":"whether the command is enabled by default when the app is added to a guild"},
         { "name": "type", "type":{"base":"int", "int_alias":"enum discord_application_command_types"}}
       ]
@@ -53,7 +53,7 @@
       [
         { "name": "name", "type":{ "base":"char", "dec":"*" }, "comment":"1-32 lowercase character name"},
         { "name": "description", "type":{ "base":"char", "dec":"*" }, "comment":"1-100 character description"},
-        { "name": "options", "type":{"base":"int", "int_alias":"enum discord_application_command_option_types", "dec":"ntl"}, "comment":"the parameters for the command"},
+        { "name": "options", "type":{"base":"int", "int_alias":"enum discord_application_command_option_types", "dec":"ntl"}, "comment":"the parameters for the command", "todo":true},
         { "name": "default_permission", "type":{"base":"bool"}, "comment":"whether the command is enabled by default when the app is added to a guild"}
       ]
     },
