tests: added bot-github-public-gists.c to test github_list_public_gists

--- a/bots/bot.config
+++ b/bots/bot.config
@@ -26,8 +26,8 @@
     "signing_secret": "YOUR-SIGNING-SECRET"
   },
   "github": {
-    "username": "YOUR-GITHUB-USERNAME",
-    "token": "YOUR-PERSONAL-ACCESS-TOKEN"
+    "username": "antropez",
+    "token": "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"
   },
   "reddit": {
     "username": "YOUR-REDDIT-USERNAME",
