--- a/bots/bot.config
+++ b/bots/bot.config
@@ -26,8 +26,8 @@
     "signing_secret": "YOUR-SIGNING-SECRET"
   },
   "github": {
-    "username": "antropez",
-    "token": "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"
+    "username": "YOUR-GITHUB-USERNAME",
+    "token": "YOUR-PERSONAL-ACCESS-TOKEN"
   },
   "reddit": {
     "username": "YOUR-REDDIT-USERNAME",
